# rtl

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
allocators/: BlockAllocator.hpp  CMakeLists.txt  LinearAllocator.hpp
cmake/: help.cmake
collectors/: BufferCollectorTemplate.h  CMakeLists.txt
core/: CMakeLists.txt
core/config/: CMakeLists.txt  Config.cpp  Config.hpp
core/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
coro/: CMakeLists.txt  CoroExceptions.hpp  ExecutorScheduler.cpp  ExecutorScheduler.hpp  Schedule.cpp  Schedule.hpp  SyncWait.hpp  Task.hpp
coro/examples/: CMakeLists.txt  main.cpp
coro/tests/: CMakeLists.txt  scheduler-test.cpp  task-test.cpp
db/: Architecture.md  CMakeLists.txt  DBRoadMap.md
db/core/: CMakeLists.txt  Connection.cpp  Connection.hpp  ConnectionConfig.hpp  ConnectionTransaction.cpp  ConnectionTransaction.hpp  Errors.hpp  Params.hpp  Result.cpp  Result.hpp
db/core/detail/: ConnectionState.hpp  PqxxHelpers.hpp  ResultFactory.hpp
db/mapping/: CMakeLists.txt
db/obs/: CMakeLists.txt
db/orm/: CMakeLists.txt
db/pool/: CMakeLists.txt  ConnectionPool.cpp  ConnectionPool.hpp  PoolConfig.hpp  PoolState.hpp  PooledConnection.cpp  PooledConnection.hpp
db/query/: CMakeLists.txt
db/test/integration/: CMakeLists.txt  main.cpp  pool_main.cpp  tx_main.cpp
db/tx/: CMakeLists.txt  IsolationLevel.hpp  Savepoint.cpp  Savepoint.hpp  Transaction.cpp  Transaction.hpp  TransactionHelper.hpp
json/: CMakeLists.txt  JsonFunctions.cpp  JsonFunctions.h
middleware/Auth/: CMakeLists.txt  IAuthenticator.hpp  IAuthorizer.hpp
protocol/: CMakeLists.txt  ConnectionProvider.cpp  ConnectionProvider.h  I7580Message.cpp  I7580Message.h  I7580Protocol.cpp  I7580Protocol.h  IProtocol.h  IProtocolMessage.h  Request.h  Serializer.h  TestTemplateMessageContainer.h
stp/: CMakeLists.txt  IExecutor.cpp  IExecutor.hpp  LockFreeQueue.hpp  RtlThreadPool.cpp  RtlThreadPool.hpp  RtlTimer.hpp  StaticThreadPool.cpp  StaticThreadPool.h  StpExceptions.hpp  ThreadPoolExecutor.cpp  ThreadPoolExecutor.hpp  UnbMpMcTemplateQueue.hpp  UnboundedMPMCQueue.h
test/: CMakeLists.txt
test/feature-test/: CMakeLists.txt  feature-test.cpp
ws/: CMakeLists.txt
ws/dto/: CMakeLists.txt  GetDeviceCapabilitiesRequestDto.hpp  GetDeviceStateRequestDto.hpp  ListDevicesRequestDto.hpp  SetDeviceParameterRequestDto.hpp  StartConnectRequestDto.hpp  StartDisconnectRequestDto.hpp  StartStreamRequestDto.hpp  StopStreamRequestDto.hpp  SubscribeTelemetryRequestDto.hpp  UnsubscribeTelemetryRequestDto.hpp  WsDtoCommon.hpp  WsRequestContextDto.hpp  WsRequestDtoMapper.hpp  WsRequestDtoVariant.hpp  WsRequestDtos.hpp
ws/examples/: CMakeLists.txt  main.cpp  main_client.cpp
ws/examples/config/: config.json
ws/examples/load_test/: load.js
ws/server/: CMakeLists.txt  WsApp.hpp  WsClient.hpp  WsConfig.hpp  WsEngine.cpp  WsEngine.hpp  WsProtocol.hpp  WsRouter.hpp  WsServer.cpp  WsServer.hpp  WsSession.hpp
ws/test/: AppDatabaseIntegrationTest.cpp  AppEmulationTest.cpp  CMakeLists.txt  WsAppLogicTest.cpp  WsProtocolTest.cpp
